--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,11 +1,12 @@
 
+image: python:3.7
+
 stages:
   - test
   - build
 
 unittests:
   stage: test
-  image: python:3.7
   before_script:
     - pip install .
   script:
@@ -13,7 +14,6 @@ unittests:
 
 flake8 checks:
   stage: test
-  image: python:3.7
   before_script:
     - pip install flake8
   script:
@@ -21,7 +21,6 @@ flake8 checks:
 
 .build sdist package:
   stage: build
-  image: python:3.7
   script:
     - python setup.py sdist
   artifacts:
@@ -30,11 +29,11 @@ flake8 checks:
 
 pages:
   stage: build
-  image: envimate/hugo
   before_script:
-    - hugo version
+    - pip install mkdocs pdoc3
   script:
-    hugo -s ./docs -d ../public
+    - python -m mkdocs build -d public
+    - pdoc3 --html -o public/api bdtsim
   artifacts:
     paths:
       - public
