only build documentation based on master branch

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,6 +29,8 @@ flake8 checks:
 
 pages:
   stage: build
+  only:
+    - master
   before_script:
     - pip install .
     - pip install mkdocs pdoc3
