install bdtsim package before running mypy checks

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,7 +22,7 @@ flake8 checks:
 mypy checks:
   stage: test
   before_script:
-    - pip install mypy
+    - pip install . mypy
   script:
     - python -m mypy -p bdtsim
 
