some more documentation

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,10 +7,12 @@ repo_url: https://gitlab.com/MatthiasLohr/bdtsim
 nav:
   - Home: index.md
   - Quickstart: quickstart.md
+  - Simulation: simulation.md
   - Commands: commands.md
   - Protocols: protocols.md
   - Environments: environments.md
   - Data Providers: dataproviders.md
+  - Development: development.md
   - API Documentation: https://matthiaslohr.gitlab.io/bdtsim/api/bdtsim/
 
 # Markdown Extension documentation:
