created pages branch for pages updates

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -38,8 +38,8 @@ build packages:
 
 pages:
   stage: build
-#  only:
-#    - tags
+  only:
+    - pages
   before_script:
     - pip install .
     - pip install mkdocs pdoc3
