--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,5 @@
 site_name: BDTsim
+site_description: Blockchain Data Trading Simulator
 site_author: Matthias Lohr
 copyright: Copyright &copy; 2020 Matthias Lohr
 theme: readthedocs
