--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,8 +8,9 @@ stages:
 
 unittests:
   stage: test
-  except:
-    - pages
+  rules:
+    - if: '$CI_COMMIT_BRANCH != "pages"'
+      when: always
   before_script:
     - pip install .
   script:
@@ -21,8 +22,9 @@ unittests python 3.7:
 
 flake8 checks:
   stage: test
-  except:
-    - pages
+  rules:
+    - if: '$CI_COMMIT_BRANCH != "pages"'
+      when: always
   before_script:
     - pip install flake8
   script:
@@ -34,8 +36,9 @@ flake8 checks python 3.7:
 
 mypy checks:
   stage: test
-  except:
-    - pages
+  rules:
+    - if: '$CI_COMMIT_BRANCH != "pages"'
+      when: always
   before_script:
     - pip install . mypy
   script:
@@ -47,8 +50,9 @@ mypy checks python 3.7:
 
 build packages:
   stage: build
-  only:
-    - tags
+  rules:
+    - if: '$CI_COMMIT_TAG != null'
+      when: always
   script:
     - python setup.py sdist bdist_wheel
     - ls -lah dist/
@@ -59,8 +63,9 @@ build packages:
 
 upload to PyPI:
   stage: deploy
-  only:
-    - tags
+  rules:
+    - if: '$CI_COMMIT_TAG != null'
+      when: always
   before_script:
     - ls -lah dist/
     - pip install twine
@@ -69,8 +74,9 @@ upload to PyPI:
 
 pages:
   stage: build
-  only:
-    - pages
+  rules:
+    - if: '$CI_COMMIT_BRANCH == "pages"'
+      when: always
   before_script:
     - pip install .
     - pip install mkdocs pdoc3
