--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -60,7 +60,7 @@ build packages:
       - dist/*.tar.gz
       - dist/*.whl
 
-upload to PyPI:
+.upload to PyPI:
   stage: deploy
   rules:
     - if: '$CI_COMMIT_TAG != null'
