--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -99,3 +99,4 @@ pages:
 include:
   - template: Dependency-Scanning.gitlab-ci.yml
   - template: SAST.gitlab-ci.yml
+  - template: Container-Scanning.gitlab-ci.yml
