--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [flake8]
-exclude = .git,build,dist,__pycache__,venv,.eggs
+exclude = .git,build,dist,__pycache__,venv,.eggs,bdtsim/protocol/fairswap/COMSYS-smartjudge
 max-line-length = 120
 
 [mypy]
