--- a/setup.cfg
+++ b/setup.cfg
@@ -1,15 +1,14 @@
 [flake8]
-exclude = .git,
-          build,
-          dist,
-          __pycache__,
-          venv,
-          .eggs,
-          bdtsim/protocol/smartjudge/COMSYS-smartjudge,
-          bdtsim/protocol/smartjudge/COMSYS-smartjudge-fairswap
+filename =
+    ./bdtsim/*.py
+
+exclude =
+    __pycache__,
+    bdtsim/protocol/smartjudge/COMSYS-smartjudge,
+    bdtsim/protocol/smartjudge/COMSYS-smartjudge-fairswap
 
 max-line-length = 120
 
 [mypy]
-python_version = 3.7
+files = ./bdtsim
 strict = True
