test case improvements

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,7 @@
 [flake8]
 filename =
-    ./bdtsim/*.py
+    ./bdtsim/**.py,
+    ./tests/**.py
 
 exclude =
     __pycache__,
@@ -10,5 +11,9 @@ exclude =
 max-line-length = 120
 
 [mypy]
-files = ./bdtsim
+files =
+    ./bdtsim,
+    ./tests
+
+
 strict = True
