--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,7 +20,7 @@ unittests:
     - python -m unittest discover tests
   parallel:
     matrix:
-      - python_version: ["3.7", "3.8"]
+      - python_version: ["3.7", "3.8", "3.9"]
 
 flake8 checks:
   stage: test
