exclude archival python scripts

--- a/setup.cfg
+++ b/setup.cfg
@@ -15,5 +15,6 @@ files =
     ./bdtsim,
     ./tests
 
+exclude = ^(bdtsim/protocol/smartjudge/COMSYS-smartjudge/deploy.py|bdtsim/protocol/smartjudge/COMSYS-smartjudge-fairswap/deploy.py)$
 
 strict = True
