fixed typing errors

--- a/setup.cfg
+++ b/setup.cfg
@@ -15,6 +15,6 @@ files =
     ./bdtsim,
     ./tests
 
-exclude = ^(bdtsim/protocol/smartjudge/COMSYS-smartjudge/deploy.py|bdtsim/protocol/smartjudge/COMSYS-smartjudge-fairswap/deploy.py)$
+exclude = ^(bdtsim/protocol/smartjudge/COMSYS-smartjudge|bdtsim/protocol/smartjudge/COMSYS-smartjudge-fairswap)/([^/]+\.py)$
 
 strict = True
