fixed pages job image reference

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -101,7 +101,7 @@ create docker image:
 
 pages:
   stage: build
-  image: python3.8
+  image: python:3.8
   rules:
     - if: '$CI_COMMIT_BRANCH == "master"'
   before_script:
