--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,6 +15,7 @@ unittests:
     - if: '$CI_COMMIT_BRANCH != "pages"'
     - if: $CI_MERGE_REQUEST_ID
   before_script:
+    - pip install --upgrade pip
     - pip install .
   script:
     - python -m unittest discover tests
@@ -29,6 +30,7 @@ flake8 checks:
     - if: '$CI_COMMIT_BRANCH != "pages"'
     - if: $CI_MERGE_REQUEST_ID
   before_script:
+    - pip install --upgrade pip
     - pip install flake8
   script:
     - python -m flake8
@@ -43,6 +45,7 @@ mypy checks:
     - if: '$CI_COMMIT_BRANCH != "pages"'
     - if: $CI_MERGE_REQUEST_ID
   before_script:
+    - pip install --upgrade pip
     - pip install . mypy
   script:
     - python -m mypy
@@ -105,6 +108,7 @@ pages:
   rules:
     - if: '$CI_COMMIT_BRANCH == "master"'
   before_script:
+    - pip install --upgrade pip
     - pip install . mkdocs pdoc3
   script:
     - python -m mkdocs build -d public
