--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -52,6 +52,7 @@ mypy checks:
   before_script:
     - pip install --upgrade pip
     - pip install . mypy
+    - python -m mypy --install-types --non-interactive
   script:
     - python -m mypy
   parallel:
